# markcraft

./: .gitignore  AGENTS.md  BENCHMARKING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
scripts/: bump_version.sh
src/markcraft/: __init__.py  markdown_primitives.py
src/markcraft/extensions/: github_wiki.py  jira_renderer.py  mathjax.py  pygments_renderer.py  scheme.py  toc_renderer.py  xwiki20_renderer.py
src/markcraft/parser/: __init__.py  block_tokenizer.py  document.py  span_tokenizer.py  state.py  tokenizers.py  tokens.py
src/markcraft/renderers/: __init__.py  ast.py  base.py  extensions.py  html.py  latex.py  markdown.py
src/markcraft/tokens/: __init__.py  latex.py  span.py
src/markcraft/tokens/block/: __init__.py  base.py  code_blocks.py  document.py  extras.py  headings.py  (+3 more)
tests/: base_test.py  benchmark.py  bump_version.sh  test_block_spans.py  test_ci.sh  test_line_numbers.py  test_namespaces.py  test_repr.py
tests/extensions/: test_github_wiki.py  test_jira_renderer.py  test_mathjax.py  test_pygments_renderer.py  test_scheme.py  test_toc_renderer.py  test_xwiki20_renderer.py
tests/parser/: test_parser_state.py  test_traverse.py
tests/renderers/: test_ast_renderer.py  test_html_renderer.py  test_latex_renderer.py  test_markdown_renderer_formatting.py  test_markdown_renderer_roundtrip.py
tests/specification/: commonmark.py
tests/tokens/: test_block_token_core.py  test_block_token_document.py  test_block_token_html.py  test_core_tokens.py  test_latex_token.py  test_span_token.py
